move App to folder components, add scrollbar, fix styles in some components

--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -7,6 +7,12 @@
   margin-left: 32px;
 }
 
+.ingredients {
+  overflow-y: auto;
+  height: calc(100vh - 90px - 40px - 40px - 56px - 40px - 40px - 64px - 64px - 40px);
+  scrollbar-width: thin;
+}
+
 .order {
   margin-top: 40px;
   display: flex;
