--- a/src/components/burger-ingredients/ingredient-item/ingredient-item.module.css
+++ b/src/components/burger-ingredients/ingredient-item/ingredient-item.module.css
@@ -2,7 +2,9 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  max-width: 48%;
+  width: 47%;
+  cursor: pointer;
+  position: relative;
 }
 
 .ingredient_price {
@@ -12,5 +14,4 @@
   align-items: center;
   margin: 0 auto;
   margin-bottom: 10px;
-  margin-top: auto;
 }
