--- a/src/components/burger-ingredients/ingredients-group/ingredients-group.module.css
+++ b/src/components/burger-ingredients/ingredients-group/ingredients-group.module.css
@@ -5,7 +5,7 @@
 .ingredient_items {
   display: flex;
   gap: 24px;
-  justify-content: space-evenly;
+  align-items: flex-start;
   flex-wrap: wrap;
   margin-top: 24px;
 } 
